--- a/src/main/resources/templates/th/fragments/sidebarfilter.html
+++ b/src/main/resources/templates/th/fragments/sidebarfilter.html
@@ -78,10 +78,10 @@
                     <input type="checkbox" id="A-B"/>
                     <label for="A-B">침실가구</label>
                     <ul>
-                        <li><a href="#">침대</a></li>
-                        <li><a href="#">서랍장</a></li>
-                        <li><a href="#">화장대</a></li>
-                        <li><a href="#">매트리스</a></li>
+                        <li><a href="100200001">침대</a></li>
+                        <li><a href="100200002">서랍장</a></li>
+                        <li><a href="100200003">화장대</a></li>
+                        <li><a href="100200004">매트리스</a></li>
                     </ul>
                 </div></li>
 
@@ -89,9 +89,9 @@
                     <input type="checkbox" id="A-C"/>
                     <label for="A-C">주방가구</label>
                     <ul>
-                        <li><a href="#">주방수납장</a></li>
-                        <li><a href="#">식탁의자</a></li>
-                        <li><a href="#">식탁</a></li>
+                        <li><a href="100300001">주방수납장</a></li>
+                        <li><a href="100300002">식탁의자</a></li>
+                        <li><a href="100300003">식탁</a></li>
                     </ul>
                 </div></li>
 
@@ -99,9 +99,9 @@
                     <input type="checkbox" id="A-D"/>
                     <label for="A-D">드레스룸</label>
                     <ul>
-                        <li><a href="#">옷장</a></li>
-                        <li><a href="#">행거</a></li>
-                        <li><a href="#">서랍장</a></li>
+                        <li><a href="100400001">옷장</a></li>
+                        <li><a href="100400002">행거</a></li>
+                        <li><a href="100400003">서랍장</a></li>
                     </ul>
                 </div></li>
             </ul>
@@ -116,8 +116,8 @@
                     <input type="checkbox" id="B-A"/>
                     <label for="B-A">서랍정리</label>
                     <ul>
-                        <li><a href="#">서랍장</a></li>
-                        <li><a href="#">이동식정리함</a></li>
+                        <li><a href="200100001">서랍장</a></li>
+                        <li><a href="200100002">이동식정리함</a></li>
                     </ul>
                 </div></li>
 
@@ -125,8 +125,8 @@
                     <input type="checkbox" id="B-B"/>
                     <label for="B-B">수납정리</label>
                     <ul>
-                        <li><a href="#">리빙박스</a></li>
-                        <li><a href="#">기타정리용품</a></li>
+                        <li><a href="200200001">리빙박스</a></li>
+                        <li><a href="200200002">기타정리용품</a></li>
                     </ul>
                 </div></li>
 
@@ -134,8 +134,8 @@
                     <input type="checkbox" id="B-C"/>
                     <label for="B-C">현관/신발정리</label>
                     <ul>
-                        <li><a href="#">신발장</a></li>
-                        <li><a href="#">우산꽂이</a></li>
+                        <li><a href="200300001">신발장</a></li>
+                        <li><a href="200300002">우산꽂이</a></li>
                     </ul>
                 </div></li>
 
@@ -151,8 +151,8 @@
                     <input type="checkbox" id="C-A"/>
                     <label for="C-A">조명</label>
                     <ul>
-                        <li><a href="#">스탠드</a></li>
-                        <li><a href="#">무드등</a></li>
+                        <li><a href="300100001">스탠드</a></li>
+                        <li><a href="300100002">무드등</a></li>
                     </ul>
                 </div></li>
 
@@ -160,8 +160,8 @@
                     <input type="checkbox" id="C-B"/>
                     <label for="C-B">장식</label>
                     <ul>
-                        <li><a href="#">액자</a></li>
-                        <li><a href="#">리스/가랜드</a></li>
+                        <li><a href="300200001">액자</a></li>
+                        <li><a href="300200002">리스/가랜드</a></li>
                     </ul>
                 </div></li>
             </ul>
