--- a/src/main/resources/templates/th/main/productDetails.html
+++ b/src/main/resources/templates/th/main/productDetails.html
@@ -9,10 +9,9 @@
         <link rel="stylesheet" th:href="@{/css/mainContent.css}">
     </th:block>
     <link th:href="@{/css/productPage.css}" rel="stylesheet"/>
-<!--    <link rel="stylesheet" th:href="@{https://www.w3schools.com/w3css/4/w3.css}">-->
+    <!--    <link rel="stylesheet" th:href="@{https://www.w3schools.com/w3css/4/w3.css}">-->
 
     <script th:src="@{https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js}"></script>
-
 
 
 </head>
@@ -84,7 +83,7 @@
                             class="production-selling-header__title__brand"
                             href="" th:value="${product.productNo}" th:text="${product.sellerName}"></a>
                     </p><span class="production-selling-header__title__name" th:value="${product.productName}"
-                              th:text="${product.productName}" th:id="pName" ></span>
+                              th:text="${product.productName}" th:id="pName"></span>
                     </h1>
                     <h4><span class="production-selling-header__price__original"
                               th:text="${product.sellPrice}"></span></h4>
@@ -95,8 +94,8 @@
                 </div>
                 <form action="" method="post" th:object="${basketVO}">
                     <div class="input-group">
-                        <select th:field="*{productColor}" class="custom-select col-md-7" id="inputGroupSelect01">
-                            <option th:value selected disabled>색상</option>
+                        <select th:field="*{productColor}" class="custom-select col-md-7" th:id="inputGroupSelect01">
+                            <option th:value selected>색상</option>
                             <option th:each="color : ${product.colorCodeVOList}"
                                     th:value="${color}"
                                     th:utext="${color}"/>
@@ -127,10 +126,8 @@
                 </form>
             </div>
         </div>
-
-
         <div class="container">
-            <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+            <ul class="nav nav-pills mb-3 justify-content-center sticky-top bg-white" style="width: 120px; background-color: white" id="pills-tab" role="tablist">
                 <li class="nav-item" role="presentation">
                     <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab"
                        aria-controls="pills-home" aria-selected="true">상품정보</a>
@@ -145,9 +142,11 @@
                 </li>
             </ul>
             <div class="tab-content" id="pills-tabContent">
-                <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+                <div class="tab-pane fade show active" id="pills-home" role="tabpanel"
+                     aria-labelledby="pills-home-tab">
                     <img th:src="@{'/uploadImg/'+${product.productExpImg}}" class="d-block w-100" alt="..."></div>
-                <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab"></div>
+                <div class="tab-pane fade" id="pills-profile" role="tabpanel"
+                     aria-labelledby="pills-profile-tab"></div>
                 <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
                     <table class="table table-sm">
                         <tbody>
@@ -178,7 +177,6 @@
         var memId2 = [[${jsonText}]];
         var memId = JSON.parse(memId2);
         console.log("memId : " + memId);
-
 
 
         // 세션에서 아이디 받아와서 아이디 없으면 실행 시켜야됨 아이디 있으면 ajax로 db에 저장시켜야함
@@ -229,98 +227,98 @@
         var key;
 
         function saveSessionStorage() {
-            if(memId == null){
+            if (memId == null) {
 
-            console.log("saveSessionStorage 실행");
-            // 변수를 선언한다.
-            var key = document.getElementById("productName").value;
-            var value = document.getElementById("productNo").value;
-            console.log("value  :  "+value);
-            if (sessionCheck == null) {
-                console.log("sessionCheck is null");
-                while (true) {
-                    console.log(a + "번째");
-                    if (valList[a] == null) {
-                        console.log("확인 : " + valList);
-                        valList[a] = value;
-                        console.log("varList" + a + "번째 : " + valList[a]);
-                        break;
+                console.log("saveSessionStorage 실행");
+                // 변수를 선언한다.
+                var key = document.getElementById("productName").value;
+                var value = document.getElementById("productNo").value;
+                console.log("value  :  " + value);
+                if (sessionCheck == null) {
+                    console.log("sessionCheck is null");
+                    while (true) {
+                        console.log(a + "번째");
+                        if (valList[a] == null) {
+                            console.log("확인 : " + valList);
+                            valList[a] = value;
+                            console.log("varList" + a + "번째 : " + valList[a]);
+                            break;
+                        }
+                        a++;
                     }
-                    a++;
+                    sessionStorage.setItem("ProductNameSession", JSON.stringify(valList));
+                } else {
+                    a = 0;
+                    console.log("sessionCheck is  not null");
+                    while (true) {
+                        console.log("stored[a] : " + stored[a]);
+                        console.log("value : " + value);
+                        if (stored[a] == value) {
+                            alert("이미 저장돼있습니다");
+                            break;
+                        }
+                        if (stored[a] == null) {
+                            console.log("stored" + a + " is Null");
+                            stored[a] = value;
+                            console.log("append 한 값은 : " + stored);
+                            break;
+                        } else {
+                            console.log("stored" + a + " is Not Null");
+                        }
+                        a++;
+                    }
+                    sessionStorage.setItem("ProductNameSession", JSON.stringify(stored));
                 }
-                sessionStorage.setItem("ProductNameSession", JSON.stringify(valList));
+
+
+                // setItem( ) 메서드를 이용하여 key를 지정하고, value값을 세션에 저장한다.
+                // sessionStorage.setItem(key, value);
+                //console.log("@@@@@@@@@@@@@@@ valList : "+valList);
+                printSessionStorage();
+
             } else {
-                a=0;
-                console.log("sessionCheck is  not null");
-                while (true) {
-                    console.log("stored[a] : " + stored[a]);
-                    console.log("value : " + value);
-                    if(stored[a] == value){
-                        alert("이미 저장돼있습니다");
-                        break;
-                    }
-                    if (stored[a] == null) {
-                        console.log("stored" + a + " is Null");
-                        stored[a] = value;
-                        console.log("append 한 값은 : " + stored);
-                        break;
-                    } else {
-                        console.log("stored" + a + " is Not Null");
-                    }
-                    a++;
-                }
-                sessionStorage.setItem("ProductNameSession", JSON.stringify(stored));
-            }
+                console.log("memId : ~ajax " + memId);
 
+                var selectOption = document.getElementById("inputGroupSelect01");
+                console.log(selectOption);
+                selectOption = selectOption.options[selectOption.selectedIndex].value;
+                console.log("옵션 : " + selectOption);
+                var qty = document.getElementById("qty").value;
+                console.log("qty : " + qty | 0);
+                //var pName = document.getElementById("pName").value;
+                //console.log("pName" + pName);
+                var pNo = document.getElementById("productNo").value;
+                console.log("pNo" + pNo);
 
-            // setItem( ) 메서드를 이용하여 key를 지정하고, value값을 세션에 저장한다.
-            // sessionStorage.setItem(key, value);
-            //console.log("@@@@@@@@@@@@@@@ valList : "+valList);
-            printSessionStorage();
-
-        }
-        else{
-            console.log("memId : ~ajax " + memId);
-
-            var selectOption = document.getElementById("inputGroupSelect01");
-            console.log(selectOption);
-            selectOption = selectOption.options[selectOption.selectedIndex].value;
-            console.log("옵션 : "+selectOption);
-            var qty = document.getElementById("qty").value;
-            console.log("qty : "+qty|0);
-            //var pName = document.getElementById("pName").value;
-            //console.log("pName" + pName);
-            var pNo = document.getElementById("productNo").value;
-            console.log("pNo" + pNo);
-
-            if(qty == ""){
+                if (qty == "") {
                     alert("숫자 입력하세요");
 
-                }else{
+                } else {
                     alert("qty 0 아님");
-                $.ajax({ // 세션 보내기 ajax
-                    //console.log("hi");
-                    url: "/basketMember",
-                    type: "POST",
-                    data: {
-                        memberId : memId,
-                        productNo : pNo,
-                        productColor : selectOption,
-                        qty : qty
-                    }
-                    ,
-                    success: function (e) {
-                        alert("basketMem 완료")
+                    $.ajax({ // 세션 보내기 ajax
+                        //console.log("hi");
+                        url: "/basketMember",
+                        type: "POST",
+                        data: {
+                            memberId: memId,
+                            productNo: pNo,
+                            productColor: selectOption,
+                            qty: qty
+                        }
+                        ,
+                        success: function (e) {
+                            alert("basketMem 완료")
 
-                    },
-                    error: function () {
-                        alert("test err");
-                    }
-                });
+                        },
+                        error: function () {
+                            alert("test err");
+                        }
+                    });
+                }
+
             }
+        }
 
-        }
-        }
         //고쳐야함
 
 
