--- a/src/main/resources/templates/th/main/searchList.html
+++ b/src/main/resources/templates/th/main/searchList.html
@@ -15,6 +15,9 @@
         <section class="container store-index-section store-index-product-list">
             <div class="virtualized-list row"
                  style="padding-top: 0px; padding-bottom: 3888px; transform: translateY(0px);">
+<!--                <tr th:if="${productList.empty}">-->
+<!--                    <td colspan="2">not found</td>-->
+<!--                </tr>-->
                 <tr th:each="products : ${productList}">
                     <div class="col-6 col-md-3 product-item-wrap">
                         <article class="production-item"><a class="production-item__overlay" th:href="@{/productions/productDetails(productNo=${products.productNo})}"></a>
