--- a/src/main/resources/templates/th/member/mypage/profile/noteSending.html
+++ b/src/main/resources/templates/th/member/mypage/profile/noteSending.html
@@ -11,10 +11,10 @@
 <div class="container">
     <form action="/noteSendingProc" method="post" id="send" name="send">
     <div class="form-group">
-    <th:block th:text="${sending}"/>
+    <input type="hidden" th:value="${sending}"/>
     </div>
     <div class="form-group">
-        <textarea id="msgContents" name="msgContents" style="width: 700px"></textarea>
+        <textarea id="msgContent" name="msgContent" style="width: 700px"></textarea>
     </div>
 
     <input type="button" id="sending" name="sending" value="보내기"/>
