--- a/src/main/resources/templates/th/layout/SellerLayout.html
+++ b/src/main/resources/templates/th/layout/SellerLayout.html
@@ -21,7 +21,7 @@
         <link rel="stylesheet" th:href="@{/css/nav.css}">
         <link rel="stylesheet" th:href="@{/css/footer.css}">
         <link rel="stylesheet" th:href="@{/css/basicComponent.css}">
-        <link rel="stylesheet" th:href="@{css/adminlte.min.css}">
+        <link rel="stylesheet" th:href="@{/css/adminlte.min.css}">
         <link th:href="@{plugins/summernote/summernote-bs4.css}" rel="stylesheet">
         <script type="text/javascript" th:src="@{/js/adminlte.min.js}"></script>
         <script type="text/javascript" th:src="@{/plugins/summernote/summernote-bs4.min.js}"></script>
@@ -36,11 +36,8 @@
             <div class="container">
                 <div class="row justify-content-center">
 
-                    <div class="col-md-3 xs-3 md-auto">
-                        <th:block th:replace="th/fragments/sellerSidebar :: sidebar"></th:block>
-                    </div>
 
-                    <div class="col-md-9 xs-9 md-auto">
+                    <div class="col-md-12 xs-12 md-auto">
                         <th:block layout:fragment="content"></th:block>
                     </div>
                 </div>
