--- a/src/main/resources/templates/th/photoBoard/photoBoardInsert.html
+++ b/src/main/resources/templates/th/photoBoard/photoBoardInsert.html
@@ -5,22 +5,59 @@
 <head>
     <meta charset="UTF-8">
     <title>사진 업로드</title>
+    <th:block layout:fragment="css">
+        <link rel="stylesheet" th:href="@{/css/mainContent.css}">
+    </th:block>
     <script type="text/javascript" th:src="@{/js/profile.js}"></script>
+    <link th:href="@{/css/productPage.css}" rel="stylesheet"/>
+
+
 </head>
 
 <body>
 <h2>사진 글쓰기</h2><!-- 삭제 -->
 <div layout:fragment="content">
 <div class="container">
+
     <form action="/photoInsertProc" method="post" enctype="multipart/form-data">
+        <div class="input-group">
+            <select class="custom-select col-md-2" th:id="inputGroupSelect01">
+                <option th:value selected disabled>평수</option>
+                <option id="areaSelect" th:each="area : ${areaCode}"
+                        th:value="${area.areaCode}"
+                        th:utext="${area.areaType}"/>
+            </select>
+            <select class="custom-select col-md-2" id="houseGroup">
+                <option th:value selected disabled>주거형태</option>
+                <option id="houseSelect" th:each="house : ${houseCode}"
+                        th:value="${house.houseCode}"
+                        th:utext="${house.houseType}"/>
+            </select>
+            <select class="custom-select col-md-2" id="styleGroup">
+                <option th:value selected disabled>스타일</option>
+                <option id="styleSelect" th:each="style : ${styleCode}"
+                        th:value="${style.styleCode}"
+                        th:utext="${style.styleType}"/>
+            </select>
+
+
+        </div>
         <div class="form-group">
             <label for="photoTitle">제목</label>
             <input type="text" id="photoTitle" name="photoTitle" placeholder="제목을 입력하세요">
         </div>
-
         <div class="form-group">
-            <label for="photoContent">내용</label>
-            <textarea id="photoContent" name="photoContent" style="width: 700px; height: 400px;"></textarea>
+            <select class="custom-select col-md-3" id="placeGroup">
+                <option th:value selected disabled>공간</option>
+                <option id="placeSelect" th:each="place : ${placeCode}"
+                        th:value="${place.placeCode}"
+                        th:utext="${place.placeType}"/>
+            </select>
+        </div>
+        <div class="form-group">
+
+            <label for="photoContent"></label>
+            <textarea id="photoContent" name="photoContent" style="width: 700px; height: 400px;" placeholder="사진에 대해 설명해주세요"></textarea>
         </div>
         <div class="form-group">
 
