--- a/src/main/resources/templates/th/photoBoard/photoBoardMain.html
+++ b/src/main/resources/templates/th/photoBoard/photoBoardMain.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>사진</title>
+    <title>커뮤니티메인</title>
 </head>
 <body>
 
