--- a/src/main/resources/templates/th/member/mypage/info/myAllInfoSettings.html
+++ b/src/main/resources/templates/th/member/mypage/info/myAllInfoSettings.html
@@ -40,6 +40,9 @@
     <div th:class="conteiner-nav">
         <nav>
             <div class="nav nav-tabs justify-content-center" id="nav-tab" role="tablist">
+                <a class="nav-item nav-link active" id="nav-myProfile-tab" data-toggle="tab"
+                   href="#nav-myProfile" role="tab"
+                   aria-controls="nav-myInfoSettings" aria-selected="true">마이프로필</a>
                 <a class="nav-item nav-link active" id="nav-myInfoSettings-tab" data-toggle="tab"
                    href="#nav-myInfoSettings" role="tab"
                    aria-controls="nav-myInfoSettings" aria-selected="true">회원정보수정</a>
@@ -49,6 +52,12 @@
             </div>
         </nav>
         <div class="tab-content" id="nav-tabContent">
+            <div class="tab-pane fade" id="nav-myProfile" role="tabpanel"
+                 aria-labelledby="nav-myProfile-tab">
+                <div class="container">
+                    <th:block th:replace="th/member/mypage/profile/noteSending"></th:block>
+                </div>
+            </div>
             <div class="tab-pane fade show active" id="nav-myInfoSettings" role="tabpanel"
                  aria-labelledby="nav-myInfoSettings-tab">
                 <div class="container">
