--- a/src/main/resources/templates/th/member/mypage/profile/noteSending.html
+++ b/src/main/resources/templates/th/member/mypage/profile/noteSending.html
@@ -7,7 +7,7 @@
 <body>
 
 <h2>쪽지 보내기</h2>
-
+<div th:fragment="noteSending">
 <div class="container">
     <form action="/noteSendingProc" method="post" id="send" name="send">
     <div class="form-group">
@@ -20,7 +20,7 @@
     <input type="button" id="sending" name="sending" value="보내기"/>
     </form>
 </div>
-
+</div>
 
 </body>
 </html>
