--- a/src/main/resources/templates/th/member/mypage/shopping/myOrderList.html
+++ b/src/main/resources/templates/th/member/mypage/shopping/myOrderList.html
@@ -14,6 +14,7 @@
 </head>
 <body>
 <div layout:fragment="content">
+    <th:block th:replace="th/fragments/navBar_myPage"></th:block>
     <ul class="nav nav-tabs" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
             <a class="nav-link active" id="orderList-tab" data-toggle="tab" href="#orderList" role="tab"
@@ -38,16 +39,58 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each=" orderList: ${orderListVOS}">
+                <tr th:each="orderList, iter: ${orderListVOS}">
                     <td th:text="${orderList.orderDate}"></td>
                     <td th:text="${orderList.productName} + '(' + ${orderList.modelName} + '/'+ ${orderList.colorName} + ')'"></td>
                     <td th:text="${orderList.totalPrice} + '원' + ' ' +'(' + ${orderList.orderQty} + '개' + ')'"></td>
                     <td th:text="무료"></td>
                     <td th:text="${orderList.orderType}"></td>
                     <td>
+                        <button class="btn btn-primary" data-toggle="collapse"
+                                th:attr="data-target='#confirm' + ${iter.count}">구매확정
+                        </button>
+                        <div th:id="'confirm' + ${iter.count}" class="collapse">
+                            <button type="button" class="btn btn-primary" data-toggle="modal" th:attr="data-target='#return' + ${iter.count}" >
+                                반품
+                            </button>
 
+                            <!-- The Modal -->
+                            <div class="modal fade" th:id="'return' + ${iter.count}">
+                                <div class="modal-dialog modal-dialog-centered">
+                                    <form>
+                                        <div class="modal-content">
 
+                                            <!-- Modal Header -->
+                                            <div class="modal-header">
+                                                <h4 class="modal-title">밤품하시겠습니까?</h4>
+                                                <button type="button" class="close" data-dismiss="modal">&times;
+                                                </button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <div class="form-group">
+                                                    <label for="return-text"
+                                                           class="col-form-label">반품사유</label>
+                                                    <textarea class="form-control"
+                                                              id="return-text"></textarea>
+                                                </div>
 
+                                            </div>
+
+                                            <!-- Modal footer -->
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                                                    취소
+                                                </button>
+                                                <button type="button" class="btn btn-primary">저장</button>
+                                            </div>
+
+                                        </div>
+
+                                    </form>
+                                </div>
+                            </div>
+
+                        </div>
                     </td>
                 </tr>
                 </tbody>
@@ -55,12 +98,9 @@
         </div>
         <div class="tab-pane fade" id="myReview" role="tabpanel" aria-labelledby="myReview-tab">
 
-            asd
 
         </div>
     </div>
-
-
 </div>
 </body>
 </html>
