--- a/src/main/resources/templates/th/member/payment/nonMemberPayment.html
+++ b/src/main/resources/templates/th/member/payment/nonMemberPayment.html
@@ -66,7 +66,7 @@
                                         <div class="cost_count">
                                             <div class="cost" th:text="${list.getProductVO().getPurchasePrice()}"></div>
                                             <div class="divider">|</div>
-                                            <div class="count" th:text="1개"></div>
+                                            <div class="count" th:text="${list.qty}+'개'"></div>
                                         </div>
                                     </div>
                                 </div>
