--- a/src/main/resources/templates/th/photoBoard/photoBoardInsert.html
+++ b/src/main/resources/templates/th/photoBoard/photoBoardInsert.html
@@ -18,7 +18,6 @@
 <h2>사진 글쓰기</h2><!-- 삭제 -->
 <div layout:fragment="content">
 <div class="container">
-
     <form action="/photoInsertProc" method="post" enctype="multipart/form-data">
         <div class="input-group">
             <select class="custom-select col-md-2" th:id="inputGroupSelect01">
@@ -39,13 +38,7 @@
                         th:value="${style.styleCode}"
                         th:utext="${style.styleType}"/>
             </select>
-
-
-        </div>
-        <div class="form-group">
-            <label for="photoTitle">제목</label>
-            <input type="text" id="photoTitle" name="photoTitle" placeholder="제목을 입력하세요">
-        </div>
+        </div><br>
         <div class="form-group">
             <select class="custom-select col-md-3" id="placeGroup">
                 <option th:value selected disabled>공간</option>
@@ -55,19 +48,19 @@
             </select>
         </div>
         <div class="form-group">
-
+            <label for="photoTitle">제목</label>
+            <input type="text" id="photoTitle" name="photoTitle" placeholder="제목을 입력하세요">
+        </div>
+        <div class="form-group">
             <label for="photoContent"></label>
             <textarea id="photoContent" name="photoContent" style="width: 700px; height: 400px;" placeholder="사진에 대해 설명해주세요"></textarea>
         </div>
         <div class="form-group">
-
                 <input type="file" id="files" name="files" multiple/>
-
             <div id="preview" >
             </div>
         </div>
         <input type="submit" value="등록"/>
-
     </form>
 </div>
 </div>
